fix : Force bind Render environment variables